--- a/test/3dkamikazeball.html
+++ b/test/3dkamikazeball.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <title>Kamikaze Ball 3D</title>
-    <script type="text/javascript" src="../common/trunk/js/jquery-1.5.2.min.js"></script>
+    <script type="text/javascript" src="js/jquery.1.9.min.js"></script>
     <script type="text/javascript" src="js/three.min.js"></script>
 </head>
 <body>
