--- a/test/bla.html
+++ b/test/bla.html
@@ -1,6 +1,6 @@
 <html>
     <head>
-	<script src="../three.js/build/three.min.js"></script>
+	<script src="js/three.min.js"></script>
     </head>
     <body>
 	<div onclick='doAnimation = false;'>Toggle Animation</div>
