--- a/test/bla.html
+++ b/test/bla.html
@@ -23,7 +23,7 @@
 
 		scene = new THREE.Scene();
 
-		texture = THREE.ImageUtils.loadTexture( "Befehlsblume.jpg" );
+		texture = THREE.ImageUtils.loadTexture( "images/Befehlsblume.jpg" );
 		texture.wrapS = THREE.RepeatWrapping;
 		texture.wrapT = THREE.RepeatWrapping; texture.repeat.set( 1, 1 );
 
