move images & add keyboard control

--- a/test/3dkamikazeball.html
+++ b/test/3dkamikazeball.html
@@ -4,6 +4,7 @@
     <title>Kamikaze Ball 3D</title>
     <script type="text/javascript" src="js/jquery.1.9.min.js"></script>
     <script type="text/javascript" src="js/three.min.js"></script>
+    <script type="text/javascript" src='js/THREEx.KeyboardState.js'></script>
 </head>
 <body>
 <script type="text/javascript" src="3dkamikazeball.js"></script>
