added help message

--- a/test/3dkamikazeball.html
+++ b/test/3dkamikazeball.html
@@ -6,6 +6,7 @@
     <script type="text/javascript" src="js/three.min.js"></script>
 </head>
 <body>
+<div>WASD/Cursor to move the ball, OL to move the camera</div>
 <script type="text/javascript" src="3dkamikazeball.js"></script>
 </body>
 </html>
