--- a/test/3dkamikazeball.html
+++ b/test/3dkamikazeball.html
@@ -6,7 +6,8 @@
     <script type="text/javascript" src="js/three.min.js"></script>
 </head>
 <body>
-<div>WASD/Cursor to move the ball, OL to move the camera, escape to restart the game</div>
+<div>WASD/Cursor to move the ball, OL to move the camera, escape to restart the game.
+    FPS: <span id="fps"></span></div>
 <div id="stats"></div>
 <script type="text/javascript" src="3dkamikazeball.js"></script>
 </body>
