--- a/test/solarsystem.html
+++ b/test/solarsystem.html
@@ -3,6 +3,7 @@
 <head>
     <script type="text/javascript" src="js/jquery.1.9.min.js"></script>
     <script type="text/javascript" src="js/three.min.js"></script>
+    <script type="text/javascript" src="js/stats.min.js"></script>
     <title>Solar System</title>
 </head>
 <body>
