added trackball controls

--- a/test/solarsystem.html
+++ b/test/solarsystem.html
@@ -4,6 +4,7 @@
     <script type="text/javascript" src="js/jquery.1.9.min.js"></script>
     <script type="text/javascript" src="js/three.min.js"></script>
     <script type="text/javascript" src="js/stats.min.js"></script>
+    <script type="text/javascript" src="js/controls/TrackballControls.js"></script>
     <title>Solar System</title>
 </head>
 <body>
